CSS/JS errors, removing nonexistent folder

--- a/BestSellers/BestSellers.Webkit/Root.html
+++ b/BestSellers/BestSellers.Webkit/Root.html
@@ -19,7 +19,7 @@
 <link href="../../WebApp/Design/RenderRTL.css" rel="stylesheet">
 <link href="../../WebApp/Design/Firefox.css" rel="stylesheet">
 <link rel="Stylesheet" type="text/css" href="../../WebApp/Design/base.css">
-<script type="text/javascript">function searchLoader() { WA.Loader(&#39;searchSpan&#39;, 1); } function actionLoader() { WA.Loader(&#39;actionSpan&#39;, 1); } </script>
+<script type="text/javascript">function searchLoader() { WA.Loader('searchSpan', 1); } function actionLoader() { WA.Loader('actionSpan',1); } </script>
 </head>
 
 <body bgcolor="#AEBAC2">
